# community-challenge

./: .dockerignore  .env  .env.local  .env.sample  .gitignore  .terraform.lock.hcl  Dockerfile  Jenkinsfile  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  action.yml  backend.txt  cloudbuild.yaml  cred.json  docker-compose.yaml  docker-compose.yml  dockercompose.yaml  eks_configmap.yaml  eks_deployments.yaml  entrypoint.sh  frontend.txt  hostober_challenge_cloudformation.yaml  ingress-service.yaml  jest.config.js  main.tf  nginx.conf  nginx.yaml  nginxDockerfile  package-lock.json  package.json  pngreadme.md  pyDockerfile  python.yaml  pythonDockerfile  readme.md  readme3.md  readme4.md  readmee.md  run.sh  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md
IaC/: .terraform.lock.hcl  civo.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  variable.tf
Infrastructure/: backend.tf  data.tf  grafana.tf  igw.tf  instance.tf  key.tf  load balancer.tf  nacl.tf  nat.tf  route.tf  sg.tf  subnets.tf  var.tf  vpc.tf
Kubernetes/: configmap.yaml  python-deployment-service.yaml  script.sh  secret.yaml  vue-deployment-service.yaml
backend/: .dockerignore  .env  Dockerfile  main.py  requirements.txt  test_main.py  test_proxy.py
components/api/: pyproject.toml
components/api/src/: main.py
docker-images/: Dockerfile.api  Dockerfile.web
frontend/: .dockerignore  .env  Dockerfile  docker-compose.yml  jsconfig.json  nginx.conf.template  nginx.sh  package-lock.json  package.json
iac/: acm.tf  alb.tf  asg.tf  backend.tf  data-source.tf  ecs-role.tf  ecs.tf  locals.tf  nat-gateway.tf  (+8 more)
(+115 files in other folders)
